--- a/src/views/Root/Root.module.css
+++ b/src/views/Root/Root.module.css
@@ -7,7 +7,8 @@
   position: relative;
   width: 100%;
   min-height: 100vh;
-  background: radial-gradient(gray -155%, black 95%);
+  background: center / contain no-repeat url('./assets/calendar.png'),
+    radial-gradient(gray -155%, black 95%);
   color: #d3d3d3;
   padding: 20px;
 }
