--- a/src/views/Root/Root.module.css
+++ b/src/views/Root/Root.module.css
@@ -21,3 +21,16 @@
 .calendar_wrapper {
   overflow-x: scroll;
 }
+
+.calendar_wrapper::-webkit-scrollbar {
+    height: 5px;
+    background-color: transparent;
+    border-radius: 5px;
+  }
+  .calendar_wrapper::-webkit-scrollbar-thumb {
+    background-color: steelblue;
+    border-radius: 5px;
+  }
+  .calendar_wrapper::-webkit-scrollbar-thumb:hover {
+    background-color: #253861;
+}
