--- a/src/views/Root/Root.module.css
+++ b/src/views/Root/Root.module.css
@@ -9,7 +9,7 @@
   min-height: 100vh;
   background: center / contain no-repeat url('./assets/calendar.png'),
     radial-gradient(gray -155%, black 95%);
-  color: #d3d3d3;
+  color: #fff;
   padding: 20px;
 }
 
@@ -23,14 +23,14 @@
 }
 
 .calendar_wrapper::-webkit-scrollbar {
-    height: 5px;
-    background-color: transparent;
-    border-radius: 5px;
-  }
-  .calendar_wrapper::-webkit-scrollbar-thumb {
-    background-color: steelblue;
-    border-radius: 5px;
-  }
-  .calendar_wrapper::-webkit-scrollbar-thumb:hover {
-    background-color: #253861;
+  height: 5px;
+  background-color: transparent;
+  border-radius: 5px;
+}
+.calendar_wrapper::-webkit-scrollbar-thumb {
+  background-color: steelblue;
+  border-radius: 5px;
+}
+.calendar_wrapper::-webkit-scrollbar-thumb:hover {
+  background-color: #253861;
 }
