--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -6,14 +6,27 @@
   border: 1px solid dimgray;
   padding: 0;
   font-size: 13px;
-  line-height: 8px;
+  line-height: 10px;
   cursor: default;
   transition: 0.3s;
 }
 
 .tableCell {
+  font-size: 13px;
+  line-height: 10px;
   text-align: center;
   background-color: transparent;
   border: 1px solid dimgray;
   padding: 5px 4px;
+}
+
+.cell {
+  padding: 5px 4px;
+  box-sizing: border-box;
+  color: #fff;
+  text-align: center;
+  background-color: transparent;
+  border: 1px solid dimgray;
+  font-size: 13px;
+  line-height: 10px;
 }
