--- a/src/ui/Button/Button.module.css
+++ b/src/ui/Button/Button.module.css
@@ -1,7 +1,14 @@
 .button {
   border: 0;
+  border-radius: 5px;
   padding: 5px 10px;
-  background-color: transparent;
+  background-color: steelblue;
   font-size: 16px;
   color: white;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.button:hover {
+  background-color: darkblue;
 }
