--- a/src/views/Root/Root.module.css
+++ b/src/views/Root/Root.module.css
@@ -16,6 +16,11 @@
 .section_wrapper {
   display: flex;
   width: 100%;
+  margin-bottom: 20px;
+}
+
+.section_wrapper:last-child {
+  margin-bottom: 0;
 }
 
 .calendar_wrapper {
