--- a/src/views/Root/Root.module.css
+++ b/src/views/Root/Root.module.css
@@ -39,3 +39,16 @@
 .calendar_wrapper::-webkit-scrollbar-thumb:hover {
   background-color: #253861;
 }
+
+.buttons_wrapper {
+  justify-content: space-between;
+}
+
+.deleteButton {
+  background-color: orange;
+  transition: 0.3s;
+}
+
+.deleteButton:hover {
+  background-color: red;
+}
