disables function of delete button

--- a/src/views/Root/Root.module.css
+++ b/src/views/Root/Root.module.css
@@ -61,3 +61,12 @@
   margin-left: 10px;
   color: steelblue;
 }
+
+.disabledButton {
+  background-color: gray;
+  cursor: default;
+}
+
+.disabledButton:hover {
+  background-color: gray;
+}
