--- a/src/views/Root/Root.module.css
+++ b/src/views/Root/Root.module.css
@@ -97,6 +97,7 @@
   justify-content: center;
   align-items: center;
   background-color: transparent;
+  padding-left: 10px;
 }
 
 .addPeriodButton {
