--- a/src/components/ModalContent/ModalContent.module.css
+++ b/src/components/ModalContent/ModalContent.module.css
@@ -78,3 +78,16 @@
 .deleteButton:hover {
   background-color: red;
 }
+
+.inputWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.validationText {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+}
