--- a/src/components/ModalContent/ModalContent.module.css
+++ b/src/components/ModalContent/ModalContent.module.css
@@ -18,7 +18,7 @@
 .labelWrapper {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
   margin-bottom: 10px;
 }
@@ -90,4 +90,12 @@
   color: red;
   font-size: 12px;
   margin-top: 5px;
+}
+
+.noteText {
+  color: darkgreen;
+  font-size: 12px;
+  margin-top: 5px;
+  text-align: left;
+  max-width: 190px;
 }
