color point of multy selected cells in hover

--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -107,6 +107,14 @@
   background-color: steelblue;
 }
 
+.cellButton.selected:hover {
+  background-color: orange;
+}
+
+.cellButton.selected:hover > div {
+  color: orange;
+}
+
 .cellButton div {
   color: #fff;
   transition: 0.3s;
