--- a/src/views/Root/Root.module.css
+++ b/src/views/Root/Root.module.css
@@ -153,6 +153,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(55, 55, 55, 0.6);
 }
 
 @media (max-width: 480px) {
