--- a/src/views/Root/Root.module.css
+++ b/src/views/Root/Root.module.css
@@ -77,7 +77,7 @@
   align-items: center;
 }
 
-.sectionMaxEmployees span {
+.sectionMaxEmployees label {
   font-size: 13px;
   margin-right: 15px;
 }
